# pop-mcp

./: .gitignore  .mcp.json  ADD_TOOL_PLAN.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.ci  E2E_TEST_FLOWS.md  EXAMPLES.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICK_REFERENCE.md  README.md  SETUP.md  TEST.md  claude_desktop_config.example.json  package.json  rust-toolchain.toml  test-quick.sh
.agents/skills/RustMcpExpert/: SKILL.md
.claude/docs/: ink-llms.txt  ink-technical-guide.txt  pop-cli-comprehensive-guide.txt  pop-cli-llms.txt  xcm-ink-examples-guide.txt
.claude/skills/final-review/: SKILL.md
.claude/skills/final-review/references/: checklist.md
.claude/skills/final-review/scripts/: quick-check.sh  validate.sh
.github/workflows/: ci.yml  coverage.yml  integration-tests.yml  lint-pr.yml  release.yml
docs/: ink-llms.txt  mcp-structured-output.md  type-hints.txt  xcm-comprehensive-guide.txt
src/: error.rs  executor.rs  index.ts  lib.rs  main.rs  resources.rs  server.rs  tools.rs
src/tools/: clean.rs  common.rs  convert.rs  helpers.rs  install.rs  mod.rs
src/tools/call/: chain.rs  contract.rs  mod.rs
src/tools/new/: chain.rs  contract.rs  mod.rs
src/tools/test/: chain.rs  contract.rs  mod.rs
src/tools/up/: chain.rs  contract.rs  mod.rs  network.rs
tests/: common.rs  mod.rs
tests/networks/: paseo+asset-hub.toml
tests/tools/: clean.rs  convert.rs  install.rs  mod.rs
tests/tools/call/: chain.rs  contract.rs
tests/tools/new/: chain.rs  contract.rs
tests/tools/test/: chain.rs  contract.rs
tests/tools/up/: chain.rs  contract.rs  mod.rs  network.rs
