[package]
name = "pop-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["R0GUE"]
license = "MIT"
description = "MCP Server for Polkadot ink! smart contract development with Pop CLI integration"
repository = "https://github.com/r0gue-io/pop-mcp"
homepage = "https://github.com/r0gue-io/pop-mcp"
keywords = ["mcp", "polkadot", "ink", "substrate", "smart-contracts"]

[[bin]]
name = "pop-mcp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.8", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary
